添加脚本说明

--- a/rules/classical/direct.yaml
+++ b/rules/classical/direct.yaml
@@ -5,3 +5,4 @@ payload:
   - DOMAIN-SUFFIX, lastpass.com
   - DOMAIN-SUFFIX, innoreader.com
   - DOMAIN-SUFFIX, gitbook.io
+  - IP-CIDR,188.180.0.0/22
