--- a/rules/classical/telegram.yaml
+++ b/rules/classical/telegram.yaml
@@ -1,24 +1,22 @@
-# NAME: Telegram
-# AUTHOR: blackmatrix7
-# REPO: https://github.com/blackmatrix7/ios_rule_script
-# UPDATED: 2024-01-08 15:59:55
-# DOMAIN: 2
-# DOMAIN-KEYWORD: 1
-# DOMAIN-SUFFIX: 21
-# IP-CIDR: 4
-# IP-CIDR6: 4
-# PROCESS-NAME: 4
-# TOTAL: 36
 payload:
   - DOMAIN,api.imem.app
+  - DOMAIN,api.mixpanel.com
   - DOMAIN,api.swiftgram.app
+  - DOMAIN-KEYWORD,nicegram
+  - DOMAIN-KEYWORD,telegram
+  - DOMAIN-SUFFIX,cdn-telegram.org
   - DOMAIN-SUFFIX,comments.app
   - DOMAIN-SUFFIX,contest.com
+  - DOMAIN-SUFFIX,fragment.com
   - DOMAIN-SUFFIX,graph.org
+  - DOMAIN-SUFFIX,imem.app
+  - DOMAIN-SUFFIX,iturrit.com
   - DOMAIN-SUFFIX,legra.ph
   - DOMAIN-SUFFIX,mbrx.app
+  - DOMAIN-SUFFIX,nicegram.app
   - DOMAIN-SUFFIX,quiz.directory
   - DOMAIN-SUFFIX,stel.com
+  - DOMAIN-SUFFIX,swiftgram.app
   - DOMAIN-SUFFIX,t.me
   - DOMAIN-SUFFIX,tdesktop.com
   - DOMAIN-SUFFIX,telega.one
@@ -33,20 +31,23 @@ payload:
   - DOMAIN-SUFFIX,tg.dev
   - DOMAIN-SUFFIX,tx.me
   - DOMAIN-SUFFIX,usercontent.dev
-  - DOMAIN-KEYWORD,nicegram
   - IP-CIDR,109.239.140.0/24
   - IP-CIDR,149.154.160.0/20
   - IP-CIDR,185.76.151.0/24
   - IP-CIDR,5.28.192.0/18
   - IP-CIDR,91.105.192.0/23
   - IP-CIDR,91.108.0.0/16
+  - IP-CIDR,91.108.12.0/22
   - IP-CIDR,91.108.16.0/21
+  - IP-CIDR,91.108.20.0/22
   - IP-CIDR,91.108.4.0/22
   - IP-CIDR,91.108.56.0/22
   - IP-CIDR,91.108.8.0/21
   - IP-CIDR,95.161.64.0/20
+  - IP-CIDR,95.161.76.101/32
   - IP-CIDR6,2001:67c:4e8::/48
   - IP-CIDR6,2001:b28:f23c::/47
+  - IP-CIDR6,2001:b28:f23d::/48
   - IP-CIDR6,2001:b28:f23f::/48
   - IP-CIDR6,2a0a:f280::/32
   - PROCESS-NAME,Telegram.exe
