--- a/rules/classical/proxy.yaml
+++ b/rules/classical/proxy.yaml
@@ -3,3 +3,5 @@ payload:
   - DOMAIN-SUFFIX, bing.com
   - DOMAIN, regex101.com
   - DOMAIN, bulianglin.com
+  - DOMAIN-SUFFIX, suno.com
+  - DOMAIN-SUFFIX, suno.ai
