--- a/rules/classical/direct.yaml
+++ b/rules/classical/direct.yaml
@@ -5,4 +5,5 @@ payload:
   - DOMAIN-SUFFIX, lastpass.com
   - DOMAIN-SUFFIX, innoreader.com
   - DOMAIN-SUFFIX, gitbook.io
+  - DOMAIN-SUFFIX, visualstudio.com
   - IP-CIDR,188.180.0.0/22
