--- a/rules/classical/proxy.yaml
+++ b/rules/classical/proxy.yaml
@@ -5,3 +5,8 @@ payload:
   - DOMAIN, bulianglin.com
   - DOMAIN-SUFFIX, suno.com
   - DOMAIN-SUFFIX, suno.ai
+  - DOMAIN-SUFFIX, googleapis.cn
+  - DOMAIN-SUFFIX, googleapis.com
+  - DOMAIN, connectivitycheck.gstatic.com
+  - DOMAIN-SUFFIX, android.clients.google.com
+  - DOMAIN-SUFFIX, serv00.com
