更新规则文件

--- a/rules/classical/direct.yaml
+++ b/rules/classical/direct.yaml
@@ -1,16 +1,25 @@
 payload:
-  - DOMAIN-SUFFIX, zhheo.com
-  - DOMAIN-SUFFIX, axshare.com
-  - DOMAIN-SUFFIX, microsoft.com
-  - DOMAIN-SUFFIX, lastpass.com
-  - DOMAIN-SUFFIX, innoreader.com
-  - DOMAIN-SUFFIX, gitbook.io
-  - DOMAIN-SUFFIX, visualstudio.com
-  - DOMAIN-SUFFIX, follow.is
-  - DOMAIN-SUFFIX, echs.top
-  - DOMAIN-SUFFIX, sharepoint.cn
-  - DOMAIN-SUFFIX, zwying.com
-  - DOMAIN-SUFFIX, lwgzs.cn
-  - DOMAIN-SUFFIX, 123pan.cn
-  - DOMAIN-SUFFIX, 123957.com
+  - DOMAIN,pt.ldoapp.tech
+  - DOMAIN-SUFFIX,123957.com
+  - DOMAIN-SUFFIX,123pan.cn
+  - DOMAIN-SUFFIX,axshare.com
+  - DOMAIN-SUFFIX,bboy.app
+  - DOMAIN-SUFFIX,challenges.cloudflare.com
+  - DOMAIN-SUFFIX,downforeveryoneorjustme.com
+  - DOMAIN-SUFFIX,echs.top
+  - DOMAIN-SUFFIX,follow.is
+  - DOMAIN-SUFFIX,gitbook.io
+  - DOMAIN-SUFFIX,icon-icons.com
+  - DOMAIN-SUFFIX,innoreader.com
+  - DOMAIN-SUFFIX,lastpass.com
+  - DOMAIN-SUFFIX,linux.do
+  - DOMAIN-SUFFIX,lwgzs.cn
+  - DOMAIN-SUFFIX,microsoft.com
+  - DOMAIN-SUFFIX,sharepoint.cn
+  - DOMAIN-SUFFIX,visualstudio.com
+  - DOMAIN-SUFFIX,zhheo.com
+  - DOMAIN-SUFFIX,zwying.com
+  - DOMAIN-SUFFIX,huluohu.com
+  - DOMAIN-SUFFIX,github.io
+  - IP-CIDR,188.160.0.0/22
   - IP-CIDR,188.180.0.0/22
