--- a/rules/domain/direct.yaml
+++ b/rules/domain/direct.yaml
@@ -4,7 +4,6 @@ payload:
   - '+.123pan.cn'
   - '+.axshare.com'
   - '+.bboy.app'
-  - '+.challenges.cloudflare.com'
   - '+.downforeveryoneorjustme.com'
   - '+.echs.top'
   - '+.follow.is'
@@ -14,10 +13,9 @@ payload:
   - '+.lastpass.com'
   - '+.linux.do'
   - '+.lwgzs.cn'
-  - '+.microsoft.com'
   - '+.sharepoint.cn'
-  - '+.visualstudio.com'
   - '+.zhheo.com'
   - '+.zwying.com'
   - '+.huluohu.com'
   - '+.github.io'
+  - '+.appinn.net'
