更新规则文件

--- a/rules/classical/proxy.yaml
+++ b/rules/classical/proxy.yaml
@@ -5769,6 +5769,117 @@ payload:
   - DOMAIN-SUFFIX,wikileaks.org
   - DOMAIN-SUFFIX,wikileaks.pl
   - DOMAIN-SUFFIX,wikiless.funami.tech
+  - DOMAIN-SUFFIX,wiong.com
+  - DOMAIN-SUFFIX,wango.org
+  - DOMAIN-SUFFIX,wangruoshui.net
+  - DOMAIN-SUFFIX,wangruowang.org
+  - DOMAIN-SUFFIX,want-daily.com
+  - DOMAIN-SUFFIX,wanz-factory.com
+  - DOMAIN-SUFFIX,wapedia.mobi
+  - DOMAIN-SUFFIX,warehouse333.com
+  - DOMAIN-SUFFIX,warroom.org
+  - DOMAIN-SUFFIX,waselpro.com
+  - DOMAIN-SUFFIX,washeng.net
+  - DOMAIN-SUFFIX,washingtonpost.com
+  - DOMAIN-SUFFIX,watch8x.com
+  - DOMAIN-SUFFIX,watchinese.com
+  - DOMAIN-SUFFIX,watchmygf.net
+  - DOMAIN-SUFFIX,watchout.tw
+  - DOMAIN-SUFFIX,wattpad.com
+  - DOMAIN-SUFFIX,wav.tv
+  - DOMAIN-SUFFIX,waveprotocol.org
+  - DOMAIN-SUFFIX,waybig.com
+  - DOMAIN-SUFFIX,waymo.com
+  - DOMAIN-SUFFIX,wd.bible
+  - DOMAIN-SUFFIX,wda.gov.tw
+  - DOMAIN-SUFFIX,wdf5.com
+  - DOMAIN-SUFFIX,wealth.com.tw
+  - DOMAIN-SUFFIX,wearehairy.com
+  - DOMAIN-SUFFIX,wearn.com
+  - DOMAIN-SUFFIX,weather.com.hk
+  - DOMAIN-SUFFIX,web.dev
+  - DOMAIN-SUFFIX,web2project.net
+  - DOMAIN-SUFFIX,webbang.net
+  - DOMAIN-SUFFIX,webevader.org
+  - DOMAIN-SUFFIX,webfreer.com
+  - DOMAIN-SUFFIX,webjb.org
+  - DOMAIN-SUFFIX,weblagu.com
+  - DOMAIN-SUFFIX,webmproject.org
+  - DOMAIN-SUFFIX,webpack.de
+  - DOMAIN-SUFFIX,webpkgcache.com
+  - DOMAIN-SUFFIX,webrtc.org
+  - DOMAIN-SUFFIX,webrush.net
+  - DOMAIN-SUFFIX,webs-tv.net
+  - DOMAIN-SUFFIX,website.new
+  - DOMAIN-SUFFIX,websitepulse.com
+  - DOMAIN-SUFFIX,websnapr.com
+  - DOMAIN-SUFFIX,webtype.com
+  - DOMAIN-SUFFIX,webwarper.net
+  - DOMAIN-SUFFIX,webworkerdaily.com
+  - DOMAIN-SUFFIX,wechatlawsuit.com
+  - DOMAIN-SUFFIX,weebly.com
+  - DOMAIN-SUFFIX,weekmag.info
+  - DOMAIN-SUFFIX,wefightcensorship.org
+  - DOMAIN-SUFFIX,wefong.com
+  - DOMAIN-SUFFIX,weiboleak.com
+  - DOMAIN-SUFFIX,weihuo.org
+  - DOMAIN-SUFFIX,weijingsheng.org
+  - DOMAIN-SUFFIX,weiming.info
+  - DOMAIN-SUFFIX,weiquanwang.org
+  - DOMAIN-SUFFIX,weisuo.ws
+  - DOMAIN-SUFFIX,welovecock.com
+  - DOMAIN-SUFFIX,welt.de
+  - DOMAIN-SUFFIX,wemigrate.org
+  - DOMAIN-SUFFIX,wengewang.com
+  - DOMAIN-SUFFIX,wengewang.org
+  - DOMAIN-SUFFIX,wenhui.ch
+  - DOMAIN-SUFFIX,wenweipo.com
+  - DOMAIN-SUFFIX,wenxuecity.com
+  - DOMAIN-SUFFIX,wenyunchao.com
+  - DOMAIN-SUFFIX,wenzhao.ca
+  - DOMAIN-SUFFIX,westca.com
+  - DOMAIN-SUFFIX,westernshugdensociety.org
+  - DOMAIN-SUFFIX,westernwolves.com
+  - DOMAIN-SUFFIX,westkit.net
+  - DOMAIN-SUFFIX,westpoint.edu
+  - DOMAIN-SUFFIX,wetplace.com
+  - DOMAIN-SUFFIX,wetpussygames.com
+  - DOMAIN-SUFFIX,wexiaobo.org
+  - DOMAIN-SUFFIX,wezhiyong.org
+  - DOMAIN-SUFFIX,wezone.net
+  - DOMAIN-SUFFIX,wforum.com
+  - DOMAIN-SUFFIX,wha.la
+  - DOMAIN-SUFFIX,whatblocked.com
+  - DOMAIN-SUFFIX,whatbrowser.org
+  - DOMAIN-SUFFIX,whats.new
+  - DOMAIN-SUFFIX,whatsonweibo.com
+  - DOMAIN-SUFFIX,wheatseeds.org
+  - DOMAIN-SUFFIX,wheelockslatin.com
+  - DOMAIN-SUFFIX,whereiswerner.com
+  - DOMAIN-SUFFIX,wheretowatch.com
+  - DOMAIN-SUFFIX,whippedass.com
+  - DOMAIN-SUFFIX,whispersystems.org
+  - DOMAIN-SUFFIX,whodns.xyz
+  - DOMAIN-SUFFIX,whoer.net
+  - DOMAIN-SUFFIX,whotalking.com
+  - DOMAIN-SUFFIX,whylover.com
+  - DOMAIN-SUFFIX,whyx.org
+  - DOMAIN-SUFFIX,widevine.com
+  - DOMAIN-SUFFIX,wikaba.com
+  - DOMAIN-SUFFIX,wiki.metacubex.one
+  - DOMAIN-SUFFIX,wikia.com
+  - DOMAIN-SUFFIX,wikibooks.org
+  - DOMAIN-SUFFIX,wikidata.org
+  - DOMAIN-SUFFIX,wikileaks-forum.com
+  - DOMAIN-SUFFIX,wikileaks.ch
+  - DOMAIN-SUFFIX,wikileaks.com
+  - DOMAIN-SUFFIX,wikileaks.de
+  - DOMAIN-SUFFIX,wikileaks.eu
+  - DOMAIN-SUFFIX,wikileaks.info
+  - DOMAIN-SUFFIX,wikileaks.lu
+  - DOMAIN-SUFFIX,wikileaks.org
+  - DOMAIN-SUFFIX,wikileaks.pl
+  - DOMAIN-SUFFIX,wikiless.funami.tech
   - DOMAIN-SUFFIX,wikilivres.info
   - DOMAIN-SUFFIX,wikimapia.org
   - DOMAIN-SUFFIX,wikimedia.org
@@ -5820,6 +5931,7 @@ payload:
   - DOMAIN-SUFFIX,woopie.jp
   - DOMAIN-SUFFIX,woopie.tv
   - DOMAIN-SUFFIX,wordpress.com
+  - DOMAIN-SUFFIX,work2icu.org
   - DOMAIN-SUFFIX,workatruna.com
   - DOMAIN-SUFFIX,workerdemo.org.hk
   - DOMAIN-SUFFIX,workerempowerment.org
@@ -5926,6 +6038,7 @@ payload:
   - DOMAIN-SUFFIX,xm.com
   - DOMAIN-SUFFIX,xml-training-guide.com
   - DOMAIN-SUFFIX,xmovies.com
+  - DOMAIN-SUFFIX,xn--11xs86f.icu
   - DOMAIN-SUFFIX,xn--4gq171p.com
   - DOMAIN-SUFFIX,xn--9pr62r24a.com
   - DOMAIN-SUFFIX,xn--czq75pvv1aj5c.org
@@ -5934,6 +6047,7 @@ payload:
   - DOMAIN-SUFFIX,xn--noss43i.com
   - DOMAIN-SUFFIX,xn--oiq.cc
   - DOMAIN-SUFFIX,xn--p8j9a0d9c9a.xn--q9jyb4c
+  - DOMAIN-SUFFIX,xnpool.com
   - DOMAIN-SUFFIX,xnxx-cdn.com
   - DOMAIN-SUFFIX,xnxx.com
   - DOMAIN-SUFFIX,xpdo.net
@@ -5942,6 +6056,8 @@ payload:
   - DOMAIN-SUFFIX,xsden.info
   - DOMAIN-SUFFIX,xskywalker.com
   - DOMAIN-SUFFIX,xskywalker.net
+  - DOMAIN-SUFFIX,xt.com
+  - DOMAIN-SUFFIX,xt.pub
   - DOMAIN-SUFFIX,xteko.com
   - DOMAIN-SUFFIX,xtube.com
   - DOMAIN-SUFFIX,xuchao.net
@@ -6096,10 +6212,12 @@ payload:
   - DOMAIN-SUFFIX,zhenlibu1984.com
   - DOMAIN-SUFFIX,zhenxiang.biz
   - DOMAIN-SUFFIX,zhinengluyou.com
+  - DOMAIN-SUFFIX,zhizhu.top
   - DOMAIN-SUFFIX,zhongguo.ca
   - DOMAIN-SUFFIX,zhongguorenquan.org
   - DOMAIN-SUFFIX,zhongguotese.net
   - DOMAIN-SUFFIX,zhongmeng.org
+  - DOMAIN-SUFFIX,zhongzidi.com
   - DOMAIN-SUFFIX,zhoushuguang.com
   - DOMAIN-SUFFIX,zhreader.com
   - DOMAIN-SUFFIX,zhuangbi.me
@@ -6123,6 +6241,8 @@ payload:
   - DOMAIN-SUFFIX,zoogvpn.com
   - DOMAIN-SUFFIX,zoom.us
   - DOMAIN-SUFFIX,zoomgov.com
+  - DOMAIN-SUFFIX,zoominfo.com
+  - DOMAIN-SUFFIX,zooqle.com
   - DOMAIN-SUFFIX,zootool.com
   - DOMAIN-SUFFIX,zoozle.net
   - DOMAIN-SUFFIX,zophar.net
