--- a/mihomo.yaml
+++ b/mihomo.yaml
@@ -41,6 +41,22 @@ proxy-providers:
     <<: *hp
     url: "https://udwtlink.top/b71f4e05-99bb-4bc9-9292-3ec4d872835d/clash"
     path: ./proxies/SUB2.yaml
+  SUB3:
+    <<: *hp
+    url: "https://cloud.xjyjc.top/vio/cloud/client/subscribe?token=ac6ff77c6f65fc9ac511f905a417526c"
+    path: ./proxies/SUB3.yaml
+  SUB4:
+    <<: *hp
+    url: "https://api.e687699.top/api/v1/client/subscribe?token=d51f623392f42a41accd2d889987e0cd"
+    path: ./proxies/SUB4.yaml
+  SUB5:
+    <<: *hp
+    url: "https://45.137.181.197/api/v1/client/subscribe?token=57141b33b664412b3254cd69853edc57"
+    path: ./proxies/SUB5.yaml
+  SUB6:
+    <<: *hp
+    url: "https://api-hy.02000.net/api/v1/client/subscribe?token=c1e7a542d82991f1011d0235ab4cc33f"
+    path: ./proxies/SUB6.yaml
   SUB9: # 兜底
     <<: *hp
     # url: "https://anaer.github.io/Sub/clash.yaml"
