--- a/proxies/SUB7.yaml
+++ b/proxies/SUB7.yaml
@@ -5,184 +5,146 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国1, server: aimanman-us.sanguayun.com, port: 22118, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇺🇸 美国2, server: aimanman-us.sanguayun.com, port: 22359, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇺🇸 美国3, server: aimanman-us.sanguayun.com, port: 22821, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇺🇸 美国4, server: aimanman-us.sanguayun.com, port: 22177, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇯🇵 日本1, server: aimanman-jp.sanguayun.com, port: 22699, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇯🇵 日本2, server: aimanman-jp.sanguayun.com, port: 22077, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇯🇵 日本3, server: aimanman-jp.sanguayun.com, port: 22573, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇯🇵 日本4, server: aimanman-jp.sanguayun.com, port: 22845, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇰🇷 韩国1, server: aimanman-kr.sanguayun.com, port: 22935, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇰🇷 韩国2, server: aimanman-kr.sanguayun.com, port: 22647, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇰🇷 韩国3, server: aimanman-kr.sanguayun.com, port: 22236, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇰🇷 韩国4, server: aimanman-kr.sanguayun.com, port: 22238, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇸🇬 新加坡1, server: aimanman-sg.sanguayun.com, port: 22640, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇸🇬 新加坡2, server: aimanman-sg.sanguayun.com, port: 22374, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇸🇬 新加坡3, server: aimanman-sg.sanguayun.com, port: 22966, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇸🇬 新加坡4, server: aimanman-sg.sanguayun.com, port: 22098, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇬🇧 英国1, server: aimanman-uk.sanguayun.com, port: 22587, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇬🇧 英国2, server: aimanman-uk.sanguayun.com, port: 22312, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇬🇧 英国3, server: aimanman-uk.sanguayun.com, port: 22378, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
-  - {name: 🇬🇧 英国4, server: aimanman-uk.sanguayun.com, port: 22853, type: hysteria2, password: 46ede68c-20e1-4042-b1ea-4338939f593b, auth: 46ede68c-20e1-4042-b1ea-4338939f593b, up: 1000, down: 1000, skip-cert-verify: false, ports: 22001-22999}
+  - {name: 距离下次重置剩余：30 天, server: 183.233.187.157, port: 20001, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇭🇰 香港一, server: 183.233.187.157, port: 20001, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇭🇰 香港二, server: 183.233.187.157, port: 20001, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇸🇬 新加坡一, server: 183.233.187.157, port: 20009, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇸🇬 新加坡三, server: 183.233.187.157, port: 20009, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇨🇳 台湾一, server: 183.233.187.157, port: 20005, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇨🇳 台湾二, server: 183.233.187.157, port: 20005, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇺🇸 美国一, server: 183.233.187.157, port: 20003, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇺🇸 美国二, server: 183.233.187.157, port: 26670, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇺🇸 美国三, server: 183.233.187.157, port: 26669, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇯🇵 日本一, server: 183.233.187.157, port: 20007, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇯🇵 日本二, server: 183.233.187.157, port: 20007, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇯🇵 日本三, server: 183.233.187.157, port: 20007, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
+  - {name: 🇯🇵 日本四, server: 183.233.187.157, port: 20007, type: ss, cipher: chacha20-ietf-poly1305, password: 99301d55-a41f-4919-986b-1435996533aa, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -198,26 +160,20 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国1
-      - 🇺🇸 美国2
-      - 🇺🇸 美国3
-      - 🇺🇸 美国4
-      - 🇯🇵 日本1
-      - 🇯🇵 日本2
-      - 🇯🇵 日本3
-      - 🇯🇵 日本4
-      - 🇰🇷 韩国1
-      - 🇰🇷 韩国2
-      - 🇰🇷 韩国3
-      - 🇰🇷 韩国4
-      - 🇸🇬 新加坡1
-      - 🇸🇬 新加坡2
-      - 🇸🇬 新加坡3
-      - 🇸🇬 新加坡4
-      - 🇬🇧 英国1
-      - 🇬🇧 英国2
-      - 🇬🇧 英国3
-      - 🇬🇧 英国4
+      - 距离下次重置剩余：30 天
+      - 🇭🇰 香港一
+      - 🇭🇰 香港二
+      - 🇸🇬 新加坡一
+      - 🇸🇬 新加坡三
+      - 🇨🇳 台湾一
+      - 🇨🇳 台湾二
+      - 🇺🇸 美国一
+      - 🇺🇸 美国二
+      - 🇺🇸 美国三
+      - 🇯🇵 日本一
+      - 🇯🇵 日本二
+      - 🇯🇵 日本三
+      - 🇯🇵 日本四
 rules:
   - DOMAIN-SUFFIX,local,🎯 全球直连
   - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
